--- a/主界面.html
+++ b/主界面.html
@@ -4,10 +4,7 @@
     <title>主界面</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <link href="data/apple-touch-icon.png" rel="apple-touch-icon"/>
-    <link href="data/startup-iphone.png" rel="apple-touch-startup-image" media="screen and (max-device-width: 320px)"/>
+    <meta name="format-detection" content="telephone=no"/>
     <link href="resources/css/jquery-ui-themes.css" type="text/css" rel="stylesheet"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
