--- a/crm框架.html
+++ b/crm框架.html
@@ -54,7 +54,7 @@
 
       <!-- main frame (Inline Frame) -->
       <div id="u0" class="ax_default" data-label="main frame">
-        <iframe id="u0_input" data-label="main frame" scrolling="auto" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <iframe id="u0_input" data-label="main frame" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
     </div>
   </body>
