识别屏幕大小水印

--- a/crm框架.html
+++ b/crm框架.html
@@ -56,6 +56,33 @@
       <div id="u0" class="ax_default" data-label="main frame">
         <iframe id="u0_input" data-label="main frame" scrolling="auto" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u1" class="ax_default label">
+        <div id="u1_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u2" class="text" style="visibility: visible;">
+          <p><span>IP6/7 375*667</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u3" class="ax_default label ax_default_unplaced" style="display: none; visibility: hidden">
+        <div id="u3_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u4" class="text" style="visibility: visible;">
+          <p><span>IP5/5S/SE 320*548</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u5" class="ax_default label ax_default_unplaced" style="display: none; visibility: hidden">
+        <div id="u5_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u6" class="text" style="visibility: visible;">
+          <p><span>IP6S/7S 414*736</span></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
