线索部分各尺寸适配

--- a/销售线索.html
+++ b/销售线索.html
@@ -658,6 +658,114 @@
           </div>
         </div>
       </div>
+
+      <!-- Unnamed (Menu) -->
+      <div id="u554" class="ax_default ax_default_unplaced" style="display: none; visibility: hidden">
+        <img id="u554_menu" class="img " src="images/销售线索/u554_menu.png" alt="u554_menu"/>
+
+        <!-- Unnamed (Table) -->
+        <div id="u555" class="ax_default">
+
+          <!-- Unnamed (Menu Item) -->
+          <div id="u556" class="ax_default menu_item">
+            <img id="u556_img" class="img " src="images/销售线索/u556.png"/>
+            <!-- Unnamed () -->
+            <div id="u557" class="text" style="visibility: visible;">
+              <p><span>&nbsp;&nbsp;&nbsp; 全部线索</span></p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Unnamed (Menu) -->
+        <div id="u558" class="ax_default sub_menu">
+          <img id="u558_menu" class="img " src="images/销售线索/u558_menu.png" alt="u558_menu"/>
+
+          <!-- Unnamed (Table) -->
+          <div id="u559" class="ax_default">
+
+            <!-- Unnamed (Menu Item) -->
+            <div id="u560" class="ax_default menu_item">
+              <img id="u560_img" class="img " src="images/销售线索/u560.png"/>
+              <!-- Unnamed () -->
+              <div id="u561" class="text" style="visibility: visible;">
+                <p><span>&nbsp;&nbsp;&nbsp; 已查看线索</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Menu Item) -->
+            <div id="u562" class="ax_default menu_item">
+              <img id="u562_img" class="img " src="images/销售线索/u560.png"/>
+              <!-- Unnamed () -->
+              <div id="u563" class="text" style="visibility: visible;">
+                <p><span>&nbsp;&nbsp;&nbsp; 最近一个月新增线索</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Menu Item) -->
+            <div id="u564" class="ax_default menu_item">
+              <img id="u564_img" class="img " src="images/销售线索/u564.png"/>
+              <!-- Unnamed () -->
+              <div id="u565" class="text" style="visibility: visible;">
+                <p><span>&nbsp;&nbsp;&nbsp; 优质线索</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (Menu) -->
+      <div id="u566" class="ax_default ax_default_unplaced" style="display: none; visibility: hidden">
+        <img id="u566_menu" class="img " src="images/销售线索/u566_menu.png" alt="u566_menu"/>
+
+        <!-- Unnamed (Table) -->
+        <div id="u567" class="ax_default">
+
+          <!-- Unnamed (Menu Item) -->
+          <div id="u568" class="ax_default menu_item">
+            <img id="u568_img" class="img " src="images/云线索/u403.png"/>
+            <!-- Unnamed () -->
+            <div id="u569" class="text" style="visibility: visible;">
+              <p><span>&nbsp;&nbsp;&nbsp; 全部线索</span></p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Unnamed (Menu) -->
+        <div id="u570" class="ax_default sub_menu">
+          <img id="u570_menu" class="img " src="images/销售线索/u570_menu.png" alt="u570_menu"/>
+
+          <!-- Unnamed (Table) -->
+          <div id="u571" class="ax_default">
+
+            <!-- Unnamed (Menu Item) -->
+            <div id="u572" class="ax_default menu_item">
+              <img id="u572_img" class="img " src="images/销售线索/u572.png"/>
+              <!-- Unnamed () -->
+              <div id="u573" class="text" style="visibility: visible;">
+                <p><span>&nbsp;&nbsp;&nbsp; 已查看线索</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Menu Item) -->
+            <div id="u574" class="ax_default menu_item">
+              <img id="u574_img" class="img " src="images/销售线索/u572.png"/>
+              <!-- Unnamed () -->
+              <div id="u575" class="text" style="visibility: visible;">
+                <p><span>&nbsp;&nbsp;&nbsp; 最近一个月新增线索</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Menu Item) -->
+            <div id="u576" class="ax_default menu_item">
+              <img id="u576_img" class="img " src="images/云线索/u407.png"/>
+              <!-- Unnamed () -->
+              <div id="u577" class="text" style="visibility: visible;">
+                <p><span>&nbsp;&nbsp;&nbsp; 优质线索</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
