客户详情页菜单横向滚动

--- a/客户详情.html
+++ b/客户详情.html
@@ -1229,6 +1229,195 @@
       <div id="u1370" class="ax_default" data-label="客户详情菜单frame">
         <iframe id="u1370_input" data-label="客户详情菜单frame" scrolling="auto" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
+
+      <!-- 客户详情滑动菜单 (Dynamic Panel) -->
+      <div id="u1371" class="ax_default ax_default_unplaced" data-label="客户详情滑动菜单" style="display: none; visibility: hidden">
+        <div id="u1371_state0" class="panel_state" data-label="客户详情">
+          <div id="u1371_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u1372" class="ax_default box_1">
+              <div id="u1372_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u1373" class="text" style="display: none; visibility: hidden">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Group) -->
+            <div id="u1374" class="ax_default">
+
+              <!-- 线索详情 (Group) -->
+              <div id="u1375" class="ax_default" data-label="线索详情">
+
+                <!-- Unnamed (Rectangle) -->
+                <div id="u1376" class="ax_default label">
+                  <div id="u1376_div" class=""></div>
+                  <!-- Unnamed () -->
+                  <div id="u1377" class="text" style="visibility: visible;">
+                    <p><span>客户详情</span></p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Unnamed (Shape) -->
+              <div id="u1378" class="ax_default icon">
+                <img id="u1378_img" class="img " src="images/客户详情/u1378.png"/>
+                <!-- Unnamed () -->
+                <div id="u1379" class="text" style="display: none; visibility: hidden">
+                  <p><span></span></p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Unnamed (Group) -->
+            <div id="u1380" class="ax_default">
+
+              <!-- 服务记录 (Group) -->
+              <div id="u1381" class="ax_default" data-label="服务记录">
+
+                <!-- Unnamed (Rectangle) -->
+                <div id="u1382" class="ax_default label">
+                  <div id="u1382_div" class=""></div>
+                  <!-- Unnamed () -->
+                  <div id="u1383" class="text" style="visibility: visible;">
+                    <p><span>商机</span></p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Unnamed (Shape) -->
+              <div id="u1384" class="ax_default icon">
+                <img id="u1384_img" class="img " src="images/客户详情/u1384.png"/>
+                <!-- Unnamed () -->
+                <div id="u1385" class="text" style="display: none; visibility: hidden">
+                  <p><span></span></p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Unnamed (Group) -->
+            <div id="u1386" class="ax_default">
+
+              <!-- 服务记录 (Group) -->
+              <div id="u1387" class="ax_default" data-label="服务记录">
+
+                <!-- Unnamed (Rectangle) -->
+                <div id="u1388" class="ax_default label">
+                  <div id="u1388_div" class=""></div>
+                  <!-- Unnamed () -->
+                  <div id="u1389" class="text" style="visibility: visible;">
+                    <p><span>联系人</span></p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Unnamed (Shape) -->
+              <div id="u1390" class="ax_default icon">
+                <img id="u1390_img" class="img " src="images/客户详情/u1390.png"/>
+                <!-- Unnamed () -->
+                <div id="u1391" class="text" style="display: none; visibility: hidden">
+                  <p><span></span></p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Unnamed (Group) -->
+            <div id="u1392" class="ax_default">
+
+              <!-- Unnamed (Shape) -->
+              <div id="u1393" class="ax_default icon">
+                <img id="u1393_img" class="img " src="images/客户详情/u1393.png"/>
+                <!-- Unnamed () -->
+                <div id="u1394" class="text" style="display: none; visibility: hidden">
+                  <p><span></span></p>
+                </div>
+              </div>
+
+              <!-- 服务记录 (Group) -->
+              <div id="u1395" class="ax_default" data-label="服务记录">
+
+                <!-- Unnamed (Rectangle) -->
+                <div id="u1396" class="ax_default label">
+                  <div id="u1396_div" class=""></div>
+                  <!-- Unnamed () -->
+                  <div id="u1397" class="text" style="visibility: visible;">
+                    <p><span>销售订单</span></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Unnamed (Group) -->
+            <div id="u1398" class="ax_default">
+
+              <!-- Unnamed (Shape) -->
+              <div id="u1399" class="ax_default icon">
+                <img id="u1399_img" class="img " src="images/客户详情/u1399.png"/>
+                <!-- Unnamed () -->
+                <div id="u1400" class="text" style="display: none; visibility: hidden">
+                  <p><span></span></p>
+                </div>
+              </div>
+
+              <!-- 服务记录 (Group) -->
+              <div id="u1401" class="ax_default" data-label="服务记录">
+
+                <!-- Unnamed (Rectangle) -->
+                <div id="u1402" class="ax_default label">
+                  <div id="u1402_div" class=""></div>
+                  <!-- Unnamed () -->
+                  <div id="u1403" class="text" style="visibility: visible;">
+                    <p><span>合同</span></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- 服务记录 (Group) -->
+            <div id="u1404" class="ax_default" data-label="服务记录">
+
+              <!-- Unnamed (Shape) -->
+              <div id="u1405" class="ax_default icon">
+                <img id="u1405_img" class="img " src="images/客户详情/u1405.png"/>
+                <!-- Unnamed () -->
+                <div id="u1406" class="text" style="display: none; visibility: hidden">
+                  <p><span></span></p>
+                </div>
+              </div>
+
+              <!-- Unnamed (Rectangle) -->
+              <div id="u1407" class="ax_default label">
+                <div id="u1407_div" class=""></div>
+                <!-- Unnamed () -->
+                <div id="u1408" class="text" style="visibility: visible;">
+                  <p><span>服务记录</span></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="u1371_state1" class="panel_state" data-label="商机" style="display: none; visibility: hidden;">
+          <div id="u1371_state1_content" class="panel_state_content">
+          </div>
+        </div>
+        <div id="u1371_state2" class="panel_state" data-label="联系人" style="display: none; visibility: hidden;">
+          <div id="u1371_state2_content" class="panel_state_content">
+          </div>
+        </div>
+        <div id="u1371_state3" class="panel_state" data-label="销售订单" style="display: none; visibility: hidden;">
+          <div id="u1371_state3_content" class="panel_state_content">
+          </div>
+        </div>
+        <div id="u1371_state4" class="panel_state" data-label="合同" style="display: none; visibility: hidden;">
+          <div id="u1371_state4_content" class="panel_state_content">
+          </div>
+        </div>
+        <div id="u1371_state5" class="panel_state" data-label="联系记录" style="display: none; visibility: hidden;">
+          <div id="u1371_state5_content" class="panel_state_content">
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
