--- a/客户详情滑动菜单.html
+++ b/客户详情滑动菜单.html
@@ -53,117 +53,117 @@
     <div id="base" class="">
 
       <!-- 客户详情滑动菜单 (Dynamic Panel) -->
-      <div id="u1409" class="ax_default" data-label="客户详情滑动菜单">
-        <div id="u1409_state0" class="panel_state" data-label="客户详情">
-          <div id="u1409_state0_content" class="panel_state_content">
+      <div id="u1408" class="ax_default" data-label="客户详情滑动菜单">
+        <div id="u1408_state0" class="panel_state" data-label="客户详情">
+          <div id="u1408_state0_content" class="panel_state_content">
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u1410" class="ax_default box_1">
-              <div id="u1410_div" class=""></div>
+            <div id="u1409" class="ax_default box_1">
+              <div id="u1409_div" class=""></div>
               <!-- Unnamed () -->
-              <div id="u1411" class="text" style="display: none; visibility: hidden">
+              <div id="u1410" class="text" style="display: none; visibility: hidden">
                 <p><span></span></p>
               </div>
             </div>
 
             <!-- Unnamed (Group) -->
-            <div id="u1412" class="ax_default">
+            <div id="u1411" class="ax_default">
 
               <!-- 线索详情 (Group) -->
-              <div id="u1413" class="ax_default" data-label="线索详情">
+              <div id="u1412" class="ax_default" data-label="线索详情">
 
                 <!-- Unnamed (Rectangle) -->
-                <div id="u1414" class="ax_default label">
-                  <div id="u1414_div" class=""></div>
+                <div id="u1413" class="ax_default label">
+                  <div id="u1413_div" class=""></div>
                   <!-- Unnamed () -->
-                  <div id="u1415" class="text" style="visibility: visible;">
+                  <div id="u1414" class="text" style="visibility: visible;">
                     <p><span>客户详情</span></p>
                   </div>
                 </div>
               </div>
 
               <!-- Unnamed (Shape) -->
-              <div id="u1416" class="ax_default icon">
-                <img id="u1416_img" class="img " src="images/客户详情/u1378.png"/>
+              <div id="u1415" class="ax_default icon">
+                <img id="u1415_img" class="img " src="images/客户详情/u1377.png"/>
                 <!-- Unnamed () -->
-                <div id="u1417" class="text" style="display: none; visibility: hidden">
+                <div id="u1416" class="text" style="display: none; visibility: hidden">
                   <p><span></span></p>
                 </div>
               </div>
             </div>
 
             <!-- Unnamed (Group) -->
-            <div id="u1418" class="ax_default">
+            <div id="u1417" class="ax_default">
 
               <!-- 服务记录 (Group) -->
-              <div id="u1419" class="ax_default" data-label="服务记录">
+              <div id="u1418" class="ax_default" data-label="服务记录">
 
                 <!-- Unnamed (Rectangle) -->
-                <div id="u1420" class="ax_default label">
-                  <div id="u1420_div" class=""></div>
+                <div id="u1419" class="ax_default label">
+                  <div id="u1419_div" class=""></div>
                   <!-- Unnamed () -->
-                  <div id="u1421" class="text" style="visibility: visible;">
+                  <div id="u1420" class="text" style="visibility: visible;">
                     <p><span>商机</span></p>
                   </div>
                 </div>
               </div>
 
               <!-- Unnamed (Shape) -->
-              <div id="u1422" class="ax_default icon">
-                <img id="u1422_img" class="img " src="images/客户详情/u1384.png"/>
+              <div id="u1421" class="ax_default icon">
+                <img id="u1421_img" class="img " src="images/客户详情/u1383.png"/>
                 <!-- Unnamed () -->
-                <div id="u1423" class="text" style="display: none; visibility: hidden">
+                <div id="u1422" class="text" style="display: none; visibility: hidden">
                   <p><span></span></p>
                 </div>
               </div>
             </div>
 
             <!-- Unnamed (Group) -->
-            <div id="u1424" class="ax_default">
+            <div id="u1423" class="ax_default">
 
               <!-- 服务记录 (Group) -->
-              <div id="u1425" class="ax_default" data-label="服务记录">
+              <div id="u1424" class="ax_default" data-label="服务记录">
 
                 <!-- Unnamed (Rectangle) -->
-                <div id="u1426" class="ax_default label">
-                  <div id="u1426_div" class=""></div>
+                <div id="u1425" class="ax_default label">
+                  <div id="u1425_div" class=""></div>
                   <!-- Unnamed () -->
-                  <div id="u1427" class="text" style="visibility: visible;">
+                  <div id="u1426" class="text" style="visibility: visible;">
                     <p><span>联系人</span></p>
                   </div>
                 </div>
               </div>
 
               <!-- Unnamed (Shape) -->
-              <div id="u1428" class="ax_default icon">
-                <img id="u1428_img" class="img " src="images/客户详情/u1390.png"/>
+              <div id="u1427" class="ax_default icon">
+                <img id="u1427_img" class="img " src="images/客户详情/u1389.png"/>
                 <!-- Unnamed () -->
-                <div id="u1429" class="text" style="display: none; visibility: hidden">
+                <div id="u1428" class="text" style="display: none; visibility: hidden">
                   <p><span></span></p>
                 </div>
               </div>
             </div>
 
             <!-- Unnamed (Group) -->
-            <div id="u1430" class="ax_default">
+            <div id="u1429" class="ax_default">
 
               <!-- Unnamed (Shape) -->
-              <div id="u1431" class="ax_default icon">
-                <img id="u1431_img" class="img " src="images/客户详情/u1393.png"/>
+              <div id="u1430" class="ax_default icon">
+                <img id="u1430_img" class="img " src="images/客户详情/u1392.png"/>
                 <!-- Unnamed () -->
-                <div id="u1432" class="text" style="display: none; visibility: hidden">
+                <div id="u1431" class="text" style="display: none; visibility: hidden">
                   <p><span></span></p>
                 </div>
               </div>
 
               <!-- 服务记录 (Group) -->
-              <div id="u1433" class="ax_default" data-label="服务记录">
+              <div id="u1432" class="ax_default" data-label="服务记录">
 
                 <!-- Unnamed (Rectangle) -->
-                <div id="u1434" class="ax_default label">
-                  <div id="u1434_div" class=""></div>
+                <div id="u1433" class="ax_default label">
+                  <div id="u1433_div" class=""></div>
                   <!-- Unnamed () -->
-                  <div id="u1435" class="text" style="visibility: visible;">
+                  <div id="u1434" class="text" style="visibility: visible;">
                     <p><span>销售订单</span></p>
                   </div>
                 </div>
@@ -171,25 +171,25 @@
             </div>
 
             <!-- Unnamed (Group) -->
-            <div id="u1436" class="ax_default">
+            <div id="u1435" class="ax_default">
 
               <!-- Unnamed (Shape) -->
-              <div id="u1437" class="ax_default icon">
-                <img id="u1437_img" class="img " src="images/客户详情/u1399.png"/>
+              <div id="u1436" class="ax_default icon">
+                <img id="u1436_img" class="img " src="images/客户详情/u1398.png"/>
                 <!-- Unnamed () -->
-                <div id="u1438" class="text" style="display: none; visibility: hidden">
+                <div id="u1437" class="text" style="display: none; visibility: hidden">
                   <p><span></span></p>
                 </div>
               </div>
 
               <!-- 服务记录 (Group) -->
-              <div id="u1439" class="ax_default" data-label="服务记录">
+              <div id="u1438" class="ax_default" data-label="服务记录">
 
                 <!-- Unnamed (Rectangle) -->
-                <div id="u1440" class="ax_default label">
-                  <div id="u1440_div" class=""></div>
+                <div id="u1439" class="ax_default label">
+                  <div id="u1439_div" class=""></div>
                   <!-- Unnamed () -->
-                  <div id="u1441" class="text" style="visibility: visible;">
+                  <div id="u1440" class="text" style="visibility: visible;">
                     <p><span>合同</span></p>
                   </div>
                 </div>
@@ -197,46 +197,46 @@
             </div>
 
             <!-- 服务记录 (Group) -->
-            <div id="u1442" class="ax_default" data-label="服务记录">
+            <div id="u1441" class="ax_default" data-label="服务记录">
 
               <!-- Unnamed (Shape) -->
-              <div id="u1443" class="ax_default icon">
-                <img id="u1443_img" class="img " src="images/客户详情/u1405.png"/>
+              <div id="u1442" class="ax_default icon">
+                <img id="u1442_img" class="img " src="images/客户详情滑动菜单/u1442.png"/>
                 <!-- Unnamed () -->
-                <div id="u1444" class="text" style="display: none; visibility: hidden">
+                <div id="u1443" class="text" style="display: none; visibility: hidden">
                   <p><span></span></p>
                 </div>
               </div>
 
               <!-- Unnamed (Rectangle) -->
-              <div id="u1445" class="ax_default label">
-                <div id="u1445_div" class=""></div>
+              <div id="u1444" class="ax_default label">
+                <div id="u1444_div" class=""></div>
                 <!-- Unnamed () -->
-                <div id="u1446" class="text" style="visibility: visible;">
+                <div id="u1445" class="text" style="visibility: visible;">
                   <p><span>服务记录</span></p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div id="u1409_state1" class="panel_state" data-label="商机" style="display: none; visibility: hidden;">
-          <div id="u1409_state1_content" class="panel_state_content">
+        <div id="u1408_state1" class="panel_state" data-label="商机" style="display: none; visibility: hidden;">
+          <div id="u1408_state1_content" class="panel_state_content">
           </div>
         </div>
-        <div id="u1409_state2" class="panel_state" data-label="联系人" style="display: none; visibility: hidden;">
-          <div id="u1409_state2_content" class="panel_state_content">
+        <div id="u1408_state2" class="panel_state" data-label="联系人" style="display: none; visibility: hidden;">
+          <div id="u1408_state2_content" class="panel_state_content">
           </div>
         </div>
-        <div id="u1409_state3" class="panel_state" data-label="销售订单" style="display: none; visibility: hidden;">
-          <div id="u1409_state3_content" class="panel_state_content">
+        <div id="u1408_state3" class="panel_state" data-label="销售订单" style="display: none; visibility: hidden;">
+          <div id="u1408_state3_content" class="panel_state_content">
           </div>
         </div>
-        <div id="u1409_state4" class="panel_state" data-label="合同" style="display: none; visibility: hidden;">
-          <div id="u1409_state4_content" class="panel_state_content">
+        <div id="u1408_state4" class="panel_state" data-label="合同" style="display: none; visibility: hidden;">
+          <div id="u1408_state4_content" class="panel_state_content">
           </div>
         </div>
-        <div id="u1409_state5" class="panel_state" data-label="联系记录" style="display: none; visibility: hidden;">
-          <div id="u1409_state5_content" class="panel_state_content">
+        <div id="u1408_state5" class="panel_state" data-label="联系记录" style="display: none; visibility: hidden;">
+          <div id="u1408_state5_content" class="panel_state_content">
           </div>
         </div>
       </div>
